Fix font size + content overflow

--- a/frontend/src/css/viewports.css
+++ b/frontend/src/css/viewports.css
@@ -24,6 +24,12 @@
         font-size: 16px;
         height: 38px;
     }
+    #articleContainer {
+        width: auto;
+    }
+    #articleContent {
+        font-size: 16px;
+    }
     #spinnerContainer {
         height: 38px;
     }
